--- a/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/cassandra.properties
+++ b/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/cassandra.properties
@@ -1,6 +1,9 @@
 # Configuration file for cassandra mailbox
 cassandra.nodes=cassandra
 cassandra.keyspace=apache_james
+#cassandra.user=cassandra
+#cassandra.password=cassandra
+#cassandra.ssl=false
 cassandra.replication.factor=1
 cassandra.retryConnection.maxRetries=200
 cassandra.retryConnection.minDelay=5000
