fixup! Isolation issues for Derby inMemry database

--- a/server/container/guice/jpa-guice/pom.xml
+++ b/server/container/guice/jpa-guice/pom.xml
@@ -199,7 +199,7 @@
                 <configuration>
                     <!-- Isolation issues with Derby inMemory database -->
                     <reuseForks>false</reuseForks>
-                    <!-- Speed uo a bit things -->
+                    <!-- Speed up a bit things -->
                     <forkCount>1C</forkCount>
                 </configuration>
             </plugin>
