--- a/server/protocols/webadmin/webadmin-data-jmap/pom.xml
+++ b/server/protocols/webadmin/webadmin-data-jmap/pom.xml
@@ -53,6 +53,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>${james.groupId}</groupId>
+            <artifactId>james-json</artifactId>
+            <scope>test</scope>
+            <type>test-jar</type>
+        </dependency>
+        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>james-server-data-jmap</artifactId>
         </dependency>
