--- a/dockerfiles/run/guice/cassandra-rabbitmq-ldap/destination/conf/blob.properties
+++ b/dockerfiles/run/guice/cassandra-rabbitmq-ldap/destination/conf/blob.properties
@@ -10,7 +10,7 @@ implementation=objectstorage
 # hybrid is using both objectstorage for unfrequently read or big blobs & cassandra for small, often read blobs
 # Size threshold for considering a blob as 'big', causing it to be saved in the low cost blobStore
 # Optional, defaults to 32768 bytes (32KB), must be positive
-hybrib.size.threshold=32768
+hybrid.size.threshold=32768
 
 # ============================================== ObjectStorage ============================================
 
