--- a/pom.xml
+++ b/pom.xml
@@ -1974,6 +1974,11 @@
                 <version>${guavate.version}</version>
             </dependency>
             <dependency>
+                <groupId>com.google.crypto.tink</groupId>
+                <artifactId>tink</artifactId>
+                <version>1.2.2</version>
+            </dependency>
+            <dependency>
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${guava.version}</version>
