--- a/dockerfiles/run/guice/cassandra/destination/conf/blob.properties
+++ b/dockerfiles/run/guice/cassandra/destination/conf/blob.properties
@@ -1,3 +1,15 @@
+# ======================================= Cassandra BlobStore Encryption ========================================
+# Which encryption algorithm should be used on top of CassandraBlobStore
+# Optional, defaults to DEFAULT. AES256 and DEFAULT allowed. Default means no encryption.
+cassandra.encryption.algorithm=DEFAULT
+
+# If AES256 additional fields are required in order to generate symetric encryption key.
+# Required when cassandra.encryption.algorithm=AES256, Hexa-decimal value need to be passed
+# cassandra.aes256.salt=c603a7327ee3dcbc031d8d34b1096c605feca5e1
+
+# Required when cassandra.encryption.algorithm=AES256
+# cassandra.aes256.password=testing
+
 # ============================================ Blobs Exporting ==============================================
 # Read https://james.apache.org/server/config-blob-export.html for further details
 
