--- a/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/cassandra.properties
+++ b/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/cassandra.properties
@@ -33,3 +33,15 @@ cassandra.retryConnection.minDelay=5000
 # chunk.size.message.read=100
 # chunk.size.expunge=100
 # mailbox.blob.part.size=102400
+
+# ======================================= Cassandra Encryption ========================================
+# Which encryption algorithm should be used on top of Cassandra byte fields for sensible information, if any.
+# Optional, defaults to DEFAULT. AES256 and DEFAULT allowed. DEFAULT means no encryption.
+cassandra.encryption.algorithm=DEFAULT
+
+# If AES256 additional fields are required in order to generate symetric encryption key.
+# Required when cassandra.encryption.algorithm=AES256, Hexa-decimal value need to be passed
+# cassandra.aes256.salt=c603a7327ee3dcbc031d8d34b1096c605feca5e1
+
+# Required when cassandra.encryption.algorithm=AES256
+# cassandra.aes256.password=testing
