[NO_REVIEW] #3202 JAMES-2890 JMAP Session object POJO & Serializer

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -86,6 +86,7 @@
         <module>protocols/fetchmail</module>
         <module>protocols/jmap</module>
         <module>protocols/jmap-draft</module>
+        <module>protocols/jmap-rfc-8621</module>
         <module>protocols/jmap-draft-integration-testing</module>
         <module>protocols/jwt</module>
         <module>protocols/protocols-imap4</module>
