--- a/dockerfiles/run/guice/memory/destination/conf/jmap.properties
+++ b/dockerfiles/run/guice/memory/destination/conf/jmap.properties
@@ -2,6 +2,8 @@
 # Read https://james.apache.org/server/config-jmap.html for further details
 
 enabled=true
+jmap.port=80
+jmap.wiretap=false
 
 tls.keystoreURL=file://conf/keystore
 tls.secret=james72laBalle
