--- a/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/blob.properties
+++ b/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/blob.properties
@@ -2,8 +2,9 @@
 # Read https://james.apache.org/server/config-blobstore.html for further details
 
 # Choose your BlobStore implementation
-# Mandatory, allowed values are: cassandra, objectstorage, hybrid
+# Mandatory, allowed values are: cassandra, objectstorage, hybrid (deprecated)
 # hybrid is using both objectstorage for unfrequently read or big blobs & cassandra for small, often read blobs
+# Deprecated. Use CachedBlobStore instead.
 implementation=objectstorage
 
 # ========================================= Hybrid BlobStore ======================================
