--- a/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/blob.properties
+++ b/dockerfiles/run/guice/cassandra-rabbitmq/destination/conf/blob.properties
@@ -4,7 +4,8 @@
 # Choose your BlobStore implementation
 # Mandatory, allowed values are: cassandra, objectstorage, hybrid (deprecated)
 # hybrid is using both objectstorage for unfrequently read or big blobs & cassandra for small, often read blobs
-# Deprecated. Use CachedBlobStore instead.
+# Deprecated. Use CachedBlobStore instead. Introduced to fasten small blob access, its usage could be compared
+# to a cache, but with a sub-optimal implementation (no eviction, default replication factor, no  circuit breaking).
 implementation=objectstorage
 
 # ========================================= Hybrid BlobStore ======================================
